    underlying the biviso() function.  In this code some dimensions
    were hard-wired at 20. This caused the function to throw an error
    if the matrix of values being isotonized was bigger than 20 x 20.
    I revised the code so that the dimensions are now dynamic.

    Thanks go to Jing Qin by whom this bug was drawn to my attention.

(2) While doing some checking I noticed that the function was
    returning results that weren't *quite* isotonic.  Made
    adjustments to value of "eps" and made "EPS" an argument of
    the "PAV" subroutine.  This appeared to reduce the problem
    substantially but did not quite eliminate it completely.

(3) It also made the algorithm sometimes fail to converge, so
    I incremented the default value of "ncycle" from 1000 to
    10000, which seems to fix the problem.

Version 0.0-11 |--> 0.0-12

# 12/January/2013

(1) Changed the file First.R to contain two functions:
    .onLoad() to load the Fortran code, and
    .onAttach() to produce the startup message.

Version 0.0-12 |--> 0.0-13

# 16/January/2013

(1) Changed biviso() to use two "epsilon" arguments, namely "eps"
    and "eps2" and changed the code of "smooth.f" to make use of
    these.  The "eps" argument is used for determining convergence.
    The "eps2" argument gets passed to the PAV() subroutine and is
    used for determined whether there are adjacent violators.

Version 0.0-13 |--> 0.0-14

# 31/March/2013

(1) Fixed a typo in biviso.R and one in biviso.Rd.

# 1/April/2013

(2) Added arguments "fatal" and "warn" to biviso(); the first (if
    set to FALSE) permits the return of "intermediate" values where
    convergence has not yet been achieved.  (This addition prompted
    by a request from Revathi Ananthakrishnan.)

(3) Added a check in biviso() that ncycle is at least 2.

(4) Modified the first example for biviso() to introduce some random
    non-isotonicity.

(5) Added an example illustrating the use of fatal=FALSE
    in biviso().

Submitted to CRAN.